a little bit update

--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
             <div id="focus-error">Click here to focus</div>
         </div>
     </main>
-    <script src="typing.js">lorem10</script>
+    <script src="typing.js"></script>
 </body>
 </html>
